fix dockerfile